@@ -1,5 +1,12 @@
 2006-12-15  Benoît Dejean  <benoit@placenet.org>
 
+	* src/procman.h:
+	* src/proctable.cpp:
+
+	Packed a bit more ProcInfo.
+
+2006-12-15  Benoît Dejean  <benoit@placenet.org>
+
 	* src/Makefile.am:
 	* src/callbacks.cpp:
 	* src/callbacks.h:
